// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Upload dropzone component correctly overrides description and drop messages 1`] = `
<div
  class="gl-relative gl-w-full"
>
  <button
    class="card gl-h-full gl-items-center gl-justify-center gl-mb-0 gl-px-5 gl-py-4 gl-w-full upload-dropzone-border upload-dropzone-card"
    type="button"
  >
    <div
      class="gl-flex gl-flex-col gl-items-center gl-justify-center gl-text-center"
      data-testid="dropzone-area"
    >
      <gl-animated-upload-icon-stub
        class="gl-mb-3"
      />
      <p
        class="gl-mb-0"
        data-testid="upload-text"
      >
        <span>
          Test %{linkStart}description%{linkEnd} message.
        </span>
      </p>
    </div>
  </button>
  <input
    accept="image/jpg,image/jpeg"
    class="hide"
    multiple=""
    name="upload_file"
    type="file"
  />
  <transition-stub
    name="upload-dropzone-fade"
  >
    <div
      class="card gl-absolute gl-flex gl-h-full gl-items-center gl-justify-center gl-p-4 gl-w-full upload-dropzone-border upload-dropzone-overlay"
      style="display: none;"
    >
      <div
        class="gl-max-w-1/2 gl-text-center"
      >
        <h3>
          Incoming!
        </h3>
        <span>
          Test drop-to-start message.
        </span>
      </div>
    </div>
  </transition-stub>
</div>
`;

exports[`Upload dropzone component when dragging renders correct template when drag event contains files 1`] = `
<div
  class="gl-relative gl-w-full"
>
  <button
    class="card gl-h-full gl-items-center gl-justify-center gl-mb-0 gl-px-5 gl-py-4 gl-w-full upload-dropzone-border upload-dropzone-card"
    type="button"
  >
    <div
      class="gl-flex gl-flex-col gl-items-center gl-justify-center gl-text-center"
      data-testid="dropzone-area"
    >
      <gl-animated-upload-icon-stub
        class="gl-mb-3"
      />
      <p
        class="gl-mb-0"
        data-testid="upload-text"
      >
        Drop or
        <gl-link-stub>
          upload
        </gl-link-stub>
        files to attach
      </p>
    </div>
  </button>
  <input
    accept="image/*"
    class="hide"
    multiple=""
    name="upload_file"
    type="file"
  />
  <transition-stub
    name="upload-dropzone-fade"
  >
    <div
      class="card gl-absolute gl-flex gl-h-full gl-items-center gl-justify-center gl-p-4 gl-w-full upload-dropzone-border upload-dropzone-overlay"
      style=""
    >
      <div
        class="gl-max-w-1/2 gl-text-center"
      >
        <h3>
          Incoming!
        </h3>
        <span>
          Drop your files to start your upload.
        </span>
      </div>
    </div>
  </transition-stub>
</div>
`;

exports[`Upload dropzone component when dragging renders correct template when drag event contains files and text 1`] = `
<div
  class="gl-relative gl-w-full"
>
  <button
    class="card gl-h-full gl-items-center gl-justify-center gl-mb-0 gl-px-5 gl-py-4 gl-w-full upload-dropzone-border upload-dropzone-card"
    type="button"
  >
    <div
      class="gl-flex gl-flex-col gl-items-center gl-justify-center gl-text-center"
      data-testid="dropzone-area"
    >
      <gl-animated-upload-icon-stub
        class="gl-mb-3"
      />
      <p
        class="gl-mb-0"
        data-testid="upload-text"
      >
        Drop or
        <gl-link-stub>
          upload
        </gl-link-stub>
        files to attach
      </p>
    </div>
  </button>
  <input
    accept="image/*"
    class="hide"
    multiple=""
    name="upload_file"
    type="file"
  />
  <transition-stub
    name="upload-dropzone-fade"
  >
    <div
      class="card gl-absolute gl-flex gl-h-full gl-items-center gl-justify-center gl-p-4 gl-w-full upload-dropzone-border upload-dropzone-overlay"
      style=""
    >
      <div
        class="gl-max-w-1/2 gl-text-center"
      >
        <h3>
          Incoming!
        </h3>
        <span>
          Drop your files to start your upload.
        </span>
      </div>
    </div>
  </transition-stub>
</div>
`;

exports[`Upload dropzone component when dragging renders correct template when drag event contains text 1`] = `
<div
  class="gl-relative gl-w-full"
>
  <button
    class="card gl-h-full gl-items-center gl-justify-center gl-mb-0 gl-px-5 gl-py-4 gl-w-full upload-dropzone-border upload-dropzone-card"
    type="button"
  >
    <div
      class="gl-flex gl-flex-col gl-items-center gl-justify-center gl-text-center"
      data-testid="dropzone-area"
    >
      <gl-animated-upload-icon-stub
        class="gl-mb-3"
      />
      <p
        class="gl-mb-0"
        data-testid="upload-text"
      >
        Drop or
        <gl-link-stub>
          upload
        </gl-link-stub>
        files to attach
      </p>
    </div>
  </button>
  <input
    accept="image/*"
    class="hide"
    multiple=""
    name="upload_file"
    type="file"
  />
  <transition-stub
    name="upload-dropzone-fade"
  >
    <div
      class="card gl-absolute gl-flex gl-h-full gl-items-center gl-justify-center gl-p-4 gl-w-full upload-dropzone-border upload-dropzone-overlay"
      style=""
    >
      <div
        class="gl-max-w-1/2 gl-text-center"
      >
        <h3>
          Oh no!
        </h3>
        <span>
          You are trying to upload something other than an image. Please upload a .png, .jpg, .jpeg, .gif, .bmp, .tiff or .ico.
        </span>
      </div>
    </div>
  </transition-stub>
</div>
`;

exports[`Upload dropzone component when dragging renders correct template when drag event is empty 1`] = `
<div
  class="gl-relative gl-w-full"
>
  <button
    class="card gl-h-full gl-items-center gl-justify-center gl-mb-0 gl-px-5 gl-py-4 gl-w-full upload-dropzone-border upload-dropzone-card"
    type="button"
  >
    <div
      class="gl-flex gl-flex-col gl-items-center gl-justify-center gl-text-center"
      data-testid="dropzone-area"
    >
      <gl-animated-upload-icon-stub
        class="gl-mb-3"
      />
      <p
        class="gl-mb-0"
        data-testid="upload-text"
      >
        Drop or
        <gl-link-stub>
          upload
        </gl-link-stub>
        files to attach
      </p>
    </div>
  </button>
  <input
    accept="image/*"
    class="hide"
    multiple=""
    name="upload_file"
    type="file"
  />
  <transition-stub
    name="upload-dropzone-fade"
  >
    <div
      class="card gl-absolute gl-flex gl-h-full gl-items-center gl-justify-center gl-p-4 gl-w-full upload-dropzone-border upload-dropzone-overlay"
      style=""
    >
      <div
        class="gl-max-w-1/2 gl-text-center"
      >
        <h3>
          Oh no!
        </h3>
        <span>
          You are trying to upload something other than an image. Please upload a .png, .jpg, .jpeg, .gif, .bmp, .tiff or .ico.
        </span>
      </div>
    </div>
  </transition-stub>
</div>
`;

exports[`Upload dropzone component when dragging renders correct template when dragging stops 1`] = `
<div
  class="gl-relative gl-w-full"
>
  <button
    class="card gl-h-full gl-items-center gl-justify-center gl-mb-0 gl-px-5 gl-py-4 gl-w-full upload-dropzone-border upload-dropzone-card"
    type="button"
  >
    <div
      class="gl-flex gl-flex-col gl-items-center gl-justify-center gl-text-center"
      data-testid="dropzone-area"
    >
      <gl-animated-upload-icon-stub
        class="gl-mb-3"
      />
      <p
        class="gl-mb-0"
        data-testid="upload-text"
      >
        Drop or
        <gl-link-stub>
          upload
        </gl-link-stub>
        files to attach
      </p>
    </div>
  </button>
  <input
    accept="image/*"
    class="hide"
    multiple=""
    name="upload_file"
    type="file"
  />
  <transition-stub
    name="upload-dropzone-fade"
  >
    <div
      class="card gl-absolute gl-flex gl-h-full gl-items-center gl-justify-center gl-p-4 gl-w-full upload-dropzone-border upload-dropzone-overlay"
      style="display: none;"
    >
      <div
        class="gl-max-w-1/2 gl-text-center"
      >
        <h3>
          Oh no!
        </h3>
        <span>
          You are trying to upload something other than an image. Please upload a .png, .jpg, .jpeg, .gif, .bmp, .tiff or .ico.
        </span>
      </div>
    </div>
  </transition-stub>
</div>
`;

exports[`Upload dropzone component when dragging with design upload overlay enabled renders component with requires classes when design upload overlay is true 1`] = `
<div
  class="gl-w-full"
>
  <button
    class="card gl-h-full gl-items-center gl-justify-center gl-mb-0 gl-px-5 gl-py-4 gl-w-full upload-dropzone-border upload-dropzone-card"
    type="button"
  >
    <div
      class="gl-flex gl-flex-col gl-items-center gl-justify-center gl-text-center"
      data-testid="dropzone-area"
    >
      <gl-animated-upload-icon-stub
        class="gl-mb-3"
      />
      <p
        class="gl-mb-0"
        data-testid="upload-text"
      >
        Drop or
        <gl-link-stub>
          upload
        </gl-link-stub>
        files to attach
      </p>
    </div>
  </button>
  <input
    accept="image/*"
    class="hide"
    multiple=""
    name="upload_file"
    type="file"
  />
  <transition-stub
    name="upload-dropzone-fade"
  >
    <div
      class="card design-upload-dropzone-overlay gl-absolute gl-border-1 gl-border-blue-500 gl-border-dashed gl-flex gl-h-full gl-items-center gl-justify-center gl-p-4 gl-w-full gl-z-200"
      style=""
    >
      <div
        class="gl-absolute gl-bg-blue-950 gl-bottom-6 gl-flex gl-items-center gl-px-3 gl-py-2 gl-rounded-base gl-text-white"
        data-testid="design-upload-overlay"
      >
        <gl-animated-upload-icon-stub
          ison="true"
          name="upload"
        />
        <span
          class="gl-ml-2"
        >
          Drop your images to start the upload.
        </span>
      </div>
    </div>
  </transition-stub>
</div>
`;

exports[`Upload dropzone component when no slot provided renders default dropzone card 1`] = `
<div
  class="gl-relative gl-w-full"
>
  <button
    class="card gl-h-full gl-items-center gl-justify-center gl-mb-0 gl-px-5 gl-py-4 gl-w-full upload-dropzone-border upload-dropzone-card"
    type="button"
  >
    <div
      class="gl-flex gl-flex-col gl-items-center gl-justify-center gl-text-center"
      data-testid="dropzone-area"
    >
      <gl-animated-upload-icon-stub
        class="gl-mb-3"
      />
      <p
        class="gl-mb-0"
        data-testid="upload-text"
      >
        Drop or
        <gl-link-stub>
          upload
        </gl-link-stub>
        files to attach
      </p>
    </div>
  </button>
  <input
    accept="image/*"
    class="hide"
    multiple=""
    name="upload_file"
    type="file"
  />
  <transition-stub
    name="upload-dropzone-fade"
  >
    <div
      class="card gl-absolute gl-flex gl-h-full gl-items-center gl-justify-center gl-p-4 gl-w-full upload-dropzone-border upload-dropzone-overlay"
      style="display: none;"
    >
      <div
        class="gl-max-w-1/2 gl-text-center"
      >
        <h3>
          Incoming!
        </h3>
        <span>
          Drop your files to start your upload.
        </span>
      </div>
    </div>
  </transition-stub>
</div>
`;

exports[`Upload dropzone component when slot provided renders dropzone with slot content 1`] = `
<div
  class="gl-relative gl-w-full"
>
  <div>
    dropzone slot
  </div>
  <transition-stub
    name="upload-dropzone-fade"
  >
    <div
      class="card gl-absolute gl-flex gl-h-full gl-items-center gl-justify-center gl-p-4 gl-w-full upload-dropzone-border upload-dropzone-overlay"
      style="display: none;"
    >
      <div
        class="gl-max-w-1/2 gl-text-center"
      >
        <h3>
          Incoming!
        </h3>
        <span>
          Drop your files to start your upload.
        </span>
      </div>
    </div>
  </transition-stub>
</div>
`;
